language string update

--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -661,8 +661,8 @@
                 </div>
                 <div class="fminput">
                     <label for="hyper_link"><acronym title="Required field" class="mark-required">*</acronym>${nn._([cms.global.PAGE_ID, 'poi-event', 'Hyper link'])}:</label>
-                    <p class="text"><span><input type="text" name="channelUrl" id="hyper_link" maxlength="100" value="${link}" placeholder="${nn._([cms.global.PAGE_ID, 'poi-event', 'Input FLIPr program or episode URL'])}" class="text" /></span></p>
-                    <span class="notice">${nn._([cms.global.PAGE_ID, 'poi-event', 'Invalid FLIPr URL, please try again.'])}</span>
+                    <p class="text"><span><input type="text" name="channelUrl" id="hyper_link" maxlength="100" value="${link}" placeholder="${nn._([cms.global.PAGE_ID, 'poi-event', 'Input URL'])}" class="text" /></span></p>
+                    <span class="notice">${nn._([cms.global.PAGE_ID, 'poi-event', 'Invalid URL, please try again.'])}</span>
                 </div>
             </div>
             <div class="func">
