filter file type, but only work on firefox and safari

--- a/video-upload.html
+++ b/video-upload.html
@@ -79,7 +79,7 @@
                 <div id="upload-area">
 
                 </div>
-                <input type="file" id="files" multiple class="hide" />
+                <input type="file" id="files" multiple class="hide" accept="video/*" />
                 <div id="upload-box" class="upload-video-btn btn-dash hide">
                     <span class="title"><img src="images/icon-upload.png"><span class="langkeyT">Choose videos to upload</span></span>
 
