--- a/episode-list.html
+++ b/episode-list.html
@@ -407,7 +407,7 @@
         <div id="func-fromepisode" data-meta="${oid}" class="btn-large btn-create">
             <div class="left"></div>
             <div class="center">
-                <p>${nn._([cms.global.PAGE_ID, 'episode-list', 'From curation'])}</p>    
+                <p>${nn._([cms.global.PAGE_ID, 'episode-list', 'Import episode'])}</p>    
                 <img src="images/icon-pencel.png" alt="">                   
             </div>
             <div class="right"></div>
@@ -430,7 +430,7 @@
         <div class="overlay-content">
             <div class="form-wrap">
                 <br /><br /><br />
-                Episode URL : &nbsp; <input id="importInText" type="text" placeholder="http://www.mars.cms/view/p35443/e995914" style="width: 68%; height:1.6rem; font-size: 1.1rem" />
+                ${nn._([cms.global.PAGE_ID, 'episode-list', 'Episode URL'])} : &nbsp; <input id="importInText" type="text" placeholder="http://www.mars.cms/view/p35443/e995914" style="width: 68%; height:1.6rem; font-size: 1.1rem" />
                 <br /><br />
                 <div class="notice hide" id="epImportNotice" style="color: red">請輸入必填項目。</div>
             </div>
