--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -5,6 +5,7 @@
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
+<link rel="shortcut icon" type="image/ico" href="favicon_flipr_pg.ico" />
 <link rel="stylesheet" href="//9x9ui.s3.amazonaws.com/poi/jquery.poi.css?v=411104" />
 <link rel="stylesheet" href="stylesheets/style.css?v=411104" />
 <link rel="stylesheet" href="stylesheets/lightbox.css?v=411104" />
@@ -51,7 +52,7 @@
 
 <!-- Header Layer Begin -->
 <div id="header" class="hide">
-    <a href="../" target="_blank" id="logo"></a>
+    <img src="images/logo_flipr_pg.png" style="width:103px; height:29px; margin-left:6px; margin-top:6px" />
     <ul id="nav">
         <li id="tv"><span><a href="../" target="_blank">Link to FLIPr.tv</a></span></li>
         <li id="profile">
