hide cms setting for permission

--- a/cms-settings.html
+++ b/cms-settings.html
@@ -246,7 +246,7 @@
             </div>
         </div>
     </div>
-    <div class="fminput clearfix">
+    <div class="fminput clearfix hide">
         <label>${nn._([cms.global.PAGE_ID, 'setting-form', 'Permission'])}<br /><br /><br /></label>
         <div class="fmfield">
             <p  >
