hide  Link to FLIPr.tv
in customCMS

--- a/channel-add.html
+++ b/channel-add.html
@@ -22,7 +22,7 @@
 <div id="header">
     <img src="images/logo_flipr_pg.png" style="width:103px; height:29px; margin-left:6px; margin-top:6px" />
     <ul id="nav">
-        <li id="tv"><span><a href="../" target="_blank">Link to FLIPr.tv</a></span></li>
+        <li id="tv"><span class="fliprOptions hide"><a href="../" target="_blank">Link to FLIPr.tv</a></span></li>
         <li id="profile">
             <p id="btn-profile"></p>
             <p id="selected-profile">Guest</p>
