--- a/channel-add.html
+++ b/channel-add.html
@@ -66,7 +66,7 @@
 <!-- Footer Layer Begin -->
 <p id="footer-control" class="on"></p>
 <div id="footer">
-    <span>© 2014 FLIPr.tv. All rights reserved.</span>
+    <span>© 2014 <fliprElm class="fliprOptions hide">FLIPr.tv.</fliprElm> All rights reserved.</span>
 </div>
 <!-- Footer Layer End -->
 
