--- a/epcurate-publish.html
+++ b/epcurate-publish.html
@@ -75,7 +75,7 @@
 <!-- Footer Layer Begin -->
 <p id="footer-control" class="hide"></p>
 <div id="footer" class="hide">
-    <span>© 2014 FLIPr.tv. All rights reserved.</span>
+    <span>© 2014 <fliprElm class="fliprOptions hide">FLIPr.tv.</fliprElm> All rights reserved.</span>
 </div>
 <!-- Footer Layer End -->
 
