add  data-mso="flipr" to <body>
update $common.isFliprBlock()

--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -48,7 +48,7 @@
 <script src="javascripts/v3/cms.poi-utility.js?v=411104"></script>
 <title>FLIPr.tv - Episode Curation - Curation</title>
 </head>
-<body class="scrollable">
+<body data-mso="flipr" class="scrollable">
 
 <!-- Header Layer Begin -->
 <div id="header" class="hide">
