--- a/epcurate-publish.html
+++ b/epcurate-publish.html
@@ -14,7 +14,7 @@
 <link rel="stylesheet" href="stylesheets/perfect-scrollbar.css?v=411104" />
 <title>FLIPr.tv - Episode Curation - Publish</title>
 </head>
-<body>
+<body data-mso="flipr">
 
 <!-- Header Layer Begin -->
 <div id="header" class="hide">
