--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" href="stylesheets/cms-component.css?v=41110499" />
 <title>FLIPr.tv - My Programs</title>
 </head>
-<body>
+<body data-mso="flipr">
 <div id="fb-root"></div>
 <!-- template = #lightbox-create-channel-tmpl -->
 
