--- a/video-upload.html
+++ b/video-upload.html
@@ -14,7 +14,7 @@
 <link rel="stylesheet" href="stylesheets/cms-component.css?v=411104" />
 <title>FLIPr.tv - Video upload</title>
 </head>
-<body>
+<body data-mso="flipr">
 <div id="fb-root"></div>
 
 <!-- Header Layer Begin -->
