--- a/app-notification.html
+++ b/app-notification.html
@@ -18,7 +18,7 @@
 <link rel="stylesheet" href="stylesheets/cms-notification.css?v=431625" />
 <title>FLIPr.tv - App Notifiction</title>
 </head>
-<body>
+<body data-mso="flipr">
 <div id="fb-root"></div>
 
 <!-- Header Layer Begin -->
