--- a/brand-setting.html
+++ b/brand-setting.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="stylesheets/portal.css?v=411104" />
 <title>FLIPr.tv - Brand Setting</title>
 </head>
-<body>
+<body data-mso="flipr">
 <div id="fb-root"></div>
 
 <!-- Header Layer Begin -->
