--- a/channel-add.html
+++ b/channel-add.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" href="stylesheets/cms-component.css?v=431625">
 <title>FLIPr.tv - Create a new program</title>
 </head>
-<body>
+<body data-mso="flipr">
 <div id="fb-root"></div>
 
 <!-- Header Layer Begin -->
