--- a/channel-poi.html
+++ b/channel-poi.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" href="stylesheets/channel-poi.css?v=411104" />
 <title>FLIPr.tv - Program POI</title>
 </head>
-<body>
+<body data-mso="flipr">
 <div id="fb-root"></div>
 
 <!-- Header Layer Begin -->
