--- a/channel-setting.html
+++ b/channel-setting.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" href="stylesheets/cms-component.css?v=431625">
 <title>FLIPr.tv - Program settings</title>
 </head>
-<body>
+<body data-mso="flipr">
 <div id="fb-root"></div>
 
 <!-- Header Layer Begin -->
