--- a/cms-settings.html
+++ b/cms-settings.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="stylesheets/perfect-scrollbar.css?v=411104" />
 <title>FLIPr.tv - CMS Settings</title>
 </head>
-<body>
+<body data-mso="flipr">
 <div id="fb-root"></div>
 
 <!-- Header Layer Begin -->
