--- a/episode-list.html
+++ b/episode-list.html
@@ -14,7 +14,7 @@
 <link rel="stylesheet" href="stylesheets/cms-component.css?v=41110499" />
 <title>FLIPr.tv - Episode list</title>
 </head>
-<body>
+<body data-mso="flipr">
 <div id="fb-root"></div>
 
 <!-- Header Layer Begin -->
