--- a/portal-manage.html
+++ b/portal-manage.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" href="stylesheets/old-portal-manage-add.css">
 <title>FLIPr.tv - Main Channels</title>
 </head>
-<body>
+<body data-mso="flipr">
 <div id="fb-root"></div>
 
 <!-- Header Layer Begin -->
