--- a/signin.html
+++ b/signin.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="stylesheets/signin.css?v=411104" />
 <title>FLIPr.tv - Sign In</title>
 </head>
-<body>
+<body data-mso="flipr">
 <div id="fb-root"></div>
 
 <!-- Header Layer Begin -->
