--- a/store-manage.html
+++ b/store-manage.html
@@ -14,7 +14,7 @@
 <link rel="stylesheet" href="stylesheets/portal.css?v=411104" />
 <title>FLIPr.tv - Store Manage</title>
 </head>
-<body>
+<body data-mso="flipr">
 <div id="fb-root"></div>
 
 <!-- Header Layer Begin -->
