language string  update

--- a/channel-setting.html
+++ b/channel-setting.html
@@ -175,7 +175,7 @@
     {{if cms.global.vIsYoutubeSync === true}}
     <div class="fminput clearfix">
         <label for="name">
-            <acronym title="Required field" class="mark-required">*</acronym>${nn._([cms.global.PAGE_ID, 'setting-form', 'Add Youtube channel or playlist URL'])}</label>
+            <acronym title="Required field" class="mark-required">*</acronym>${nn._([cms.global.PAGE_ID, 'setting-form', 'Add channel or playlist URL'])}</label>
         <div class="fmfield">
             <p class="text disabled">
                 <span>
