--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
     <label for="filter_all" class="lbTypeLists checked">
         <input type="radio" name="filter" value="all" id="filter_all" class="lbTypeItem" checked> {{html nn._([cms.global.PAGE_ID, 'title-func', 'All'])}}</label>
     <label for="filter_9x9" class="lbTypeLists">
-        <input type="radio" name="filter" value="9x9" id="filter_9x9" class="lbTypeItem"> {{html nn._([cms.global.PAGE_ID, 'title-func', 'FLIPr programs'])}}</label>
+        <input type="radio" name="filter" value="9x9" id="filter_9x9" class="lbTypeItem"> {{html nn._([cms.global.PAGE_ID, 'title-func', 'Curated programs'])}}</label>
     <label for="filter_youtube" class="lbTypeLists">
         <input type="radio" name="filter" value="YoutubeSync" id="filter_youtube" class="lbTypeItem"> {{html nn._([cms.global.PAGE_ID, 'title-func', 'Sync programs'])}}</label>
     <label for="filter_youtubelive" class="lbTypeLists">
