flipr to curated

--- a/app-notification.html
+++ b/app-notification.html
@@ -263,7 +263,7 @@
                     <label for="run-app2" class="radio-btn">${nn._([cms.global.PAGE_ID, 'notification', 'Playback for a program or episode'])}</label>
                     <br>
 
-                    <input id="NotifyContent" type="text" placeholder="${nn._([cms.global.PAGE_ID, 'notification', 'Input FLIPr program or episode URL...'])}" style="display: none;">                                                
+                    <input id="NotifyContent" type="text" placeholder="${nn._([cms.global.PAGE_ID, 'notification', 'Input Curated program or episode URL...'])}" style="display: none;">                                                
                 </div> 
             </div>
             <div class="form-group required-field">
