--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             <div id="create-9x9-program" class="btn-large btn-create">
                 <div class="left"></div>
                 <div class="center">    
-                    <p>{{html nn._([cms.global.PAGE_ID, 'overlay', 'FLIPr<br />Program'])}}</p>
+                    <p>{{html nn._([cms.global.PAGE_ID, 'overlay', 'Curated<br />Program'])}}</p>
                     <img src="images/icon_9x9.png" alt="">               
                 </div>
                 <div class="right"></div>
