flipr to curated

--- a/channel-add.html
+++ b/channel-add.html
@@ -188,7 +188,7 @@
     {{else cms.global.vIsYoutubeLive === true}}
         {{html nn._([cms.global.PAGE_ID, 'title-func', 'Create a new Live Program'])}}
     {{else}}
-        {{html nn._([cms.global.PAGE_ID, 'title-func', 'Create a new FLIPr Program'])}}
+        {{html nn._([cms.global.PAGE_ID, 'title-func', 'Create a new Curated Program'])}}
     {{/if}}
     </h2>
     <p class="required"><acronym title="Required field" class="mark-required">*</acronym>${nn._([cms.global.PAGE_ID, 'title-func', 'Required field'])}</p>
