--- a/channel-setting.html
+++ b/channel-setting.html
@@ -196,7 +196,7 @@
         <div class="fmfield">
             <p class="text">
                 <span>
-                    <input type="text" name="sourceUrl2" id="ytUrlLive" maxlength="100" value="" class="text" data-ctype="ytlive" placeholder="${nn._([cms.global.PAGE_ID, 'setting-form', 'Input live video URL...'])}">
+                    <input type="text" name="sourceUrl2" id="ytUrlLive" maxlength="100" value="" class="text" data-ctype="ytlive" data-status="editing" placeholder="${nn._([cms.global.PAGE_ID, 'setting-form', 'Input live video URL...'])}">
                 </span>
             </p>
             <div class="clear">
