[Safari on MAC] 無法點擊MP4檔進行video upload

--- a/video-upload.html
+++ b/video-upload.html
@@ -80,7 +80,7 @@
                 <div id="upload-area">
 
                 </div>
-                <input type="file" id="files" multiple class="hide" accept="video/*" />
+                <input type="file" id="files" multiple class="hide" />
                 <div id="upload-box" class="upload-video-btn btn-dash hide">
                     <span class="title"><img src="images/icon-upload.png"><span class="langkeyT">Choose videos to upload</span></span>
 
