1. 移除 Sync program 內 episode list 的右側 reorder 圖樣。

--- a/episode-list.html
+++ b/episode-list.html
@@ -371,7 +371,7 @@
             {{/if}}
         </div>
     </div>
-    <p class="drag"><span>move</span></p>
+    <p class="drag{{if true === cms.global.vIsYoutubeSync}} hide{{/if}}"><span>move</span></p>
 </div>
 </div>
 </div>
