--- a/channel-add.html
+++ b/channel-add.html
@@ -409,13 +409,13 @@
     {{/if}}
     {{if cms.global.USER_PRIV.isAutoOn === true}}
     <div class="fminput clearfix">
-        <input type="hidden" id="StorePool" name="status" value="3" />
+        <input type="hidden" id="StorePool" name="status" value="0" />
         <label>{{html nn._([cms.global.PAGE_ID, 'setting-form', 'Add to My App'])}}</label>
         <div class="fmfield">
             <div class="connected add-store">
                 <div class="share-item first">
                     <img src="images/icon_program_store.png">
-                    <a id="add-store-switch" href="#" class="switch-off">No</a> 
+                    <a id="add-store-switch" href="#" class="switch-on">No</a> 
                     <a id="fb-reconnect" href="javascript:void(0);">
                         <img src="images/icon_question.png" alt="">
                         <div id="msgAutoSync" class="overlay-h60 youtube-sync-tip">
