3. Video check button mouse hover 文字改為：Check the video of the episode if it's invalid. 中文翻譯為：檢查劇集內的影片是否已經失效

--- a/episode-list.html
+++ b/episode-list.html
@@ -323,7 +323,7 @@
                 <div class="btn" id="yuchk-btn-${id}"></div>
                 <div class="tip-white">
                     <p class="left"></p>
-                    <p class="center" id="yuchk-msg-${id}">${nn._([cms.global.PAGE_ID, 'episode-list', 'Video check'])}</p>
+                    <p class="center" id="yuchk-msg-${id}">${nn._([cms.global.PAGE_ID, 'episode-list', "Check the video of the episode if it's invalid."])}</p>
                     <p class="right"></p>    
                 </div>
                 <div class="tip-bottom"></div>
