4. "Get URL" button mouse hover 文字改為 Share URL

--- a/episode-list.html
+++ b/episode-list.html
@@ -200,7 +200,7 @@
 <script id="get-url-tmpl" type="text/x-jquery-tmpl">
 <ul class="tooltip-content-list">
     <li>
-        <label class="title">${nn._([cms.global.PAGE_ID, 'episode-list', "URL"])}</label>
+        <label class="title">${nn._([cms.global.PAGE_ID, 'episode-list', "Share URL"])}</label>
         <input data-mso_name="${brand}" class="input-gray srul-text" value="http://www.FLIPr.tv/view?mso={msoId}&ch=xxxx&ep=xxxx" onclick="this.select()" />
     </li>
 </ul>
