--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 <script id="get-url-tmpl" type="text/x-jquery-tmpl">
 <ul class="tooltip-content-list">
     <li>
-        <label class="title">${nn._([cms.global.PAGE_ID, 'channel-list', "URL"])}</label>
+        <label class="title">${nn._([cms.global.PAGE_ID, 'channel-list', "Share URL"])}</label>
         <input class="input-gray srul-text" onclick="this.select()" value="http://www.FLIPr.tv">
     </li>
 </ul>
