update URL to Share URL

--- a/episode-list.html
+++ b/episode-list.html
@@ -344,7 +344,7 @@
                 <div id="get-url-${id}" class="get-url tooltip-wrap" data-metach="${$.url().param('id')}" data-metaep="${id}">
                     <ul class="tooltip-content-list">
                         <li>
-                            <label class="title">URL</label>
+                            <label class="title">Share URL</label>
                             <input class="input-gray srul-text" value="http://www.FLIPr.tv/" onclick="this.select()" />
                         </li>
                     </ul>
