--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                 <div id="get-url-${id}" class="get-url tooltip-wrap show-top" data-metain="0" data-metaep="0" data-metach="${id}">
                     <ul class="tooltip-content-list">
                         <li>
-                            <label class="title">URL</label>
+                            <label class="title">Share URL</label>
                             <input class="input-gray srul-text" onclick="this.select()" value="http://www.FLIPr.tv">
                         </li>
                     </ul>
