add "Program list" in nav

--- a/channel-setting.html
+++ b/channel-setting.html
@@ -167,7 +167,9 @@
 <!-- content-main-tmpl Begin -->
 <script id="content-main-tmpl" type="text/x-jquery-tmpl">
 <div id="title-func" class="clearfix">
-    <h2><span id="channel-name" data-width="">${name}</span><span class="title-crumb">&gt; ${nn._([cms.global.PAGE_ID, 'title-func', 'Settings'])}</span></h2>
+    <h2><span id="channel-name" data-width="">
+        <a href="index.html">${nn._([cms.global.PAGE_ID, 'title-func', 'Program list'])}</a>  &gt; ${name}</span>
+    <span class="title-crumb">: ${nn._([cms.global.PAGE_ID, 'title-func', 'Settings'])}</span></h2>
     <p class="required"><acronym title="Required field" class="mark-required">*</acronym>${nn._([cms.global.PAGE_ID, 'title-func', 'Required field'])}</p>
 </div>
 <div id="content-main-wrap" class="footer-on">
