--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -15,6 +15,8 @@
 <link rel="stylesheet" href="stylesheets/perfect-scrollbar.css?v=411104" />
 <link rel="stylesheet" href="stylesheets/epcurate.css?v=411104" />
 <link rel="stylesheet" href="stylesheets/ep-curation.css?v=411104" />
+<link rel="stylesheet" href="stylesheets/cms-component.css?v=411104" />
+
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 <script src="//9x9ui.s3.amazonaws.com/poi/jquery.poi.js?v=411104"></script>
