--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -658,7 +658,7 @@
                     <label for="hyper_display_text"><acronym title="Required field" class="mark-required">*</acronym>${nn._([cms.global.PAGE_ID, 'poi-event', 'Display'])}:</label>
 <!-- poi image mode -->
                     <input type="text" name="displayText" id="hyper_display_text" 
-                        value="${message}{{if '' == message}}text{{/if}}" class="hide" />
+                            value="${message}{{if '' == message}}text{{/if}}" class="hide" />
                     <div class="style-select">
                         <select id="poiDisplayType" class="form-control input-gray with-left-icon ">
                             <option {{if "text" == message}}selected {{/if}} value="text">Text</option>
@@ -671,7 +671,11 @@
                     <p class="text">
                         <span>
                             <input type="file" class="hide" id="fup" />
-                            <input type="text" name="btnText" id="hyper_button_text" maxlength="20" value="${button}" placeholder="${nn._([cms.global.PAGE_ID, 'poi-event', 'Input button text'])}" class="text" />
+                            <input type="text" name="btnText" id="hyper_button_text" 
+                                    maxlength="{{if 'image' != message}}20{{else}}520{{/if}}" 
+                                    value="${button}" 
+                                    placeholder="${nn._([cms.global.PAGE_ID, 'poi-event', 'Input button text'])}" 
+                                    class="text" />
                                 <p class="edit-icon btnUploadImage {{if 'image' != message}} hide{{/if}}"></p>
                         </span>
                     </p>
