--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -19,8 +19,8 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-<script src="//9x9ui.s3.amazonaws.com/poi/jquery.poi.js?v=411104"></script>
-<!-- <script src="javascripts/libs/jquery.poi.js"></script> -->
+<!-- <script src="//9x9ui.s3.amazonaws.com/poi/jquery.poi.js?v=411104"></script> -->
+<script src="javascripts/libs/jquery.poi.js"></script>
 <script src="javascripts/libs/nn-sdk.js?v=411104"></script>
 <script src="javascripts/libs/respond.min.js?v=411104"></script>
 <script src="javascripts/libs/jquery.mousewheel.min.js?v=411104"></script>
