2. 在創建 sync program 時，移除 overlay "Synchronizing. This may take a few minutes." 左邊的 sync icon。

--- a/channel-add.html
+++ b/channel-add.html
@@ -111,7 +111,7 @@
     <div class="overlay-h172-left"></div>
     <div class="overlay-h172-center">
         <p class="btn-close"></p>
-        <img src="images/icon_load_l.gif" alt="">
+        <img src="images/icon_load_l.gif" class="hide">
         <p class="content">Synchronizing. This may take a few minutes.</p>
         <div class="overlay-button-holder">
             <div class="btn-gray">
