--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
         <div class="fmfield">
             <div class="select enable disabled">
                 <p class="select-btn on"></p>
-                <p class="select-txt"><a href="#" onclick="return false;">All</a></p>
+                <p class="select-txt"><a href="#" onclick="return false;">{{html nn._([cms.global.PAGE_ID, 'title-func', 'All'])}}</a></p>
                 <ul class="select-list" style="display: none;">
                     <li data-meta="all"        >{{html nn._([cms.global.PAGE_ID, 'title-func', 'All'])}}</li>
                     <li data-meta="9x9"        >{{html nn._([cms.global.PAGE_ID, 'title-func', 'Curated programs'])}}</li>
@@ -433,27 +433,26 @@
             <a href="${cms.global.SHARE_URL_BASE}/view/p${id}" target="_blank"><img src="images/icon_playlist.png" alt="" class="watermark" /></a>
         </div>
         <div class="info">
-            <h3><a href="{{if true === isYoutubeLive}}javascript:void(0);{{else}}episode-list.html?id=${id}{{/if}}">${name}</a></h3>
+            <h3>
+                {{if paidChannel}}
+                    <span class="badge danger ">${nn._([cms.global.PAGE_ID, 'channel-list', 'Paid'])}</span>
+                {{/if}}
+                <a href="{{if true === isYoutubeLive}}javascript:void(0);{{else}}episode-list.html?id=${id}{{/if}}">${name}</a>
+            </h3>
+            <div class="badge-list">
+                <span class="badge outline">{{if isPublic}}${nn._([cms.global.PAGE_ID, 'channel-list', 'Publish'])}{{else}}${nn._([cms.global.PAGE_ID, 'channel-list', 'Unpublish'])}{{/if}}</span>
+                {{if true === isYoutubeSync}}
+                    <span class="badge outline">${nn._([cms.global.PAGE_ID, 'channel-list', 'Sync programe'])}</span>
+                {{else true === isYoutubeLive}}
+                    <span class="badge outline">${nn._([cms.global.PAGE_ID, 'channel-list', 'Live programe'])}</span>
+                {{/if}}
+            </div>
             <p><span>${cntEpisode}</span>${nn._([cms.global.PAGE_ID, 'channel-list', 'Episodes'])}</p>
             <p><span>${cntSubscribe}</span>${nn._([cms.global.PAGE_ID, 'channel-list', 'Followers'])}</p>
         </div>
         <div class="func-wrap">
             <p class="time">
                 ${nn._([cms.global.PAGE_ID, 'channel-list', 'Update:'])} ${cms.common.formatTimestamp(updateDate)} 
-                {{if true === isYoutubeSync}}
-                    <img id="ytSync_${id}" class="fucnYtSync" data-meta="${autoSync}"  data-program="${id}"
-                         title="{{html nn._([cms.global.PAGE_ID, 'channel-list', 'Sync program'])}}"
-                         src="images/icon_sync_${autoSync}.png">
-                    <img title="{{if 4 === sorting}}{{html nn._([cms.global.PAGE_ID, 'channel-list', 'Sort by order'])}}{{else}}{{html nn._([cms.global.PAGE_ID, 'channel-list', 'Sort by reverse order'])}}{{/if}}"
-                         src="images/icon_youtube_order_${sorting}.png">
-                {{else true === isYoutubeLive}}
-                    <img title="{{html nn._([cms.global.PAGE_ID, 'channel-list', 'Live program'])}}"
-                             src="images/icon_live_program_sm.png">
-                {{/if}}
-                {{if cms.global.USER_PRIV.isAutoOn === true && status === 0}}
-                    <img title="{{html nn._([cms.global.PAGE_ID, 'channel-list', 'In my app'])}}"
-                         src="images/icon_program_store.png">
-                {{/if}}
             </p>
             <div class="func-btns">
                 <div class="btn-wrap enable">
