--- a/channel-setting.html
+++ b/channel-setting.html
@@ -344,13 +344,13 @@
                 <p class="select-txt"><a href="#">Free programe</a>
                 </p>
                 <ul id="paid-select-list" class="select-list">
-                    <li data-meta="free">Free programe</li>
-                    <li data-meta="paid">Paid programe</li>
+                    <li data-meta="false">Free programe</li>
+                    <li data-meta="true">Paid programe</li>
                 </ul>
                 <input id="paidChannel" type="hidden" name="paidChannel" value="${paidChannel}" class="select-meta">
             </div>
         </div>
-        <div id="paidBlock" class="fmfield clearfix ">
+        <div id="paidBlock" class="fmfield clearfix hide">
             <div class="fminput clearfix">
                 <label>Program price</label>
             </div>
@@ -374,7 +374,7 @@
                             <li data-meta="9.99">$ 9.99 USD</li>
                             <li data-meta="10.99">$ 10.99 USD</li>
                         </ul>
-                        <input type="hidden" name="price" value="" class="select-meta">
+                        <input type="hidden" name="iap_price" value="" class="select-meta price">
                     </div>
                 </div>
             </div>
@@ -383,7 +383,7 @@
                 <div class="fmfield">
                     <p class="text">
                         <span>
-                            <input type="text" maxlength="100" value="" class="text">
+                            <input type="text" name="iap_title" maxlength="100" value="" class="text iap_title">
                         </span>
                     </p>
                 </div>
@@ -394,7 +394,7 @@
                     <p class="textarea">
                         <span>
                             <span>
-                                <textarea name="intro" cols="80" class="textarea"></textarea>
+                                <textarea name="iap_description" cols="80" class="textarea iap_description"></textarea>
                             </span>
                         </span>
                     </p>
@@ -414,8 +414,8 @@
                     <p id="uploadPaid">${nn._([cms.global.PAGE_ID, 'setting-form', 'Upload'])}</p>
                     <p class="notice img-upload">Better results with 640 x 360 resolution image</p>
                     <p class="notice upload-notice hide">Please upload a screenshot which is at least 640 x 920 pixels and at least 72 dpi.</p>
-                    <input type="hidden" class="imageUrl"    name="imageUrlPaid"    id="imageUrlPaid"    value="">
-                    <input type="hidden" class="imageUrlOld" name="imageUrlOldPaid" id="imageUrlOldPaid" value="">
+                    <input type="hidden" class="imageUrl"    name="iap_thumbnail"    id="iap_thumbnail"    value="">
+                    <input type="hidden" class="imageUrlOld" name="iap_thumbnailOld" id="iap_thumbnailOld" value="">
                     <a href="" class="icon-question is-with-tooltip">
                         <div class="tooltip-wrap">
                             Upload a screenshot of the product as it appears on the device. This screenshot is used for Apple’s review only and is not displayed on the App Store.
@@ -425,11 +425,12 @@
                 </div>
 
             </div>
-        </div>
-        <a href="" class="fmfield clearfix icon-exclamation">
+
+        <a href="javascripts:void(0)" id='paidRemove' class="fmfield clearfix icon-exclamation hide">
             <span>If you want to delete the product from App store or Google play please contact with us before a month.</span>
 
         </a>
+        </div>
     </div>
 
 <!-- IAP end -->
