check data  for paid

--- a/channel-setting.html
+++ b/channel-setting.html
@@ -347,7 +347,7 @@
                     <li data-meta="false">Free programe</li>
                     <li data-meta="true">Paid programe</li>
                 </ul>
-                <input id="paidChannel" type="hidden" name="paidChannel" value="${paidChannel}" class="select-meta">
+                <input id="paidChannel" type="hidden" name="paidChannel" value="${paidChannel}" data-oristatus="${paidChannel}" class="select-meta">
             </div>
         </div>
         <div id="paidBlock" class="fmfield clearfix hide">
